--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary-color: #ff014f;
-  --text-dark: #222222;
+  --text-dark: #152A69;
   --white: #ffffff;
   --max-width: 1200px;
 }
